--- a/Makefile_cuda
+++ b/Makefile_cuda
@@ -8,7 +8,7 @@ NVCCFLAGS = -gencode arch=compute_35,code=[compute_35,sm_35] \
             -gencode arch=compute_70,code=[compute_70,sm_70]
 
 # Source files
-SRCS = include/csr/csr.cpp include/cpu/cpuBFS.cpp include/gpu/gpuBFS.cu main.cu
+SRCS = include/csr/csr.cpp include/cpu/cpuBFS.cpp include/serialized/serialized.cpp include/gpu/gpuBFS.cu main.cu
 
 # Object files (substitute .cpp and .cu with .o)
 OBJS = $(filter %.o, $(SRCS:.cpp=.o) $(SRCS:.cu=.o))
