seperate kernels for expansion and contraction

--- a/Makefile_cuda
+++ b/Makefile_cuda
@@ -3,12 +3,13 @@ CC = gcc
 NVCC = nvcc
 
 # Flags
-NVCCFLAGS = -gencode arch=compute_35,code=[compute_35,sm_35] \
-            -gencode arch=compute_61,code=[compute_61,sm_61] \
-            -gencode arch=compute_70,code=[compute_70,sm_70]
+CFLAGS = -fPIC
+NVCCFLAGS = -gencode arch=compute_61,code=[compute_61,sm_61] \
+            -gencode arch=compute_70,code=[compute_70,sm_70] \
+            -Xcompiler -fPIC
 
 # Source files
-SRCS = include/csr/csr.cpp include/cpu/cpuBFS.cpp include/serialized/serialized.cpp include/gpu/gpuBFS.cu main.cu
+SRCS = include/csr/csr.cpp include/cpu/cpuBFS.cpp include/serialized/serialized.cpp include/gpu/gpuBFS.cu include/prefix_sum/prefixSum.cu main.cu
 
 # Object files (substitute .cpp and .cu with .o)
 OBJS = $(filter %.o, $(SRCS:.cpp=.o) $(SRCS:.cu=.o))
