--- a/Makefile_cuda
+++ b/Makefile_cuda
@@ -6,7 +6,7 @@ NVCC = nvcc
 CFLAGS = -fPIC
 NVCCFLAGS = -gencode arch=compute_61,code=[compute_61,sm_61] \
             -gencode arch=compute_70,code=[compute_70,sm_70] \
-            -Xcompiler -fPIC --expt-relaxed-constexpr
+            -Xcompiler -fPIC --expt-relaxed-constexpr -lnvshmem
 
 # Source files
 SRCS = include/csr/csr.cpp include/cpu/cpuBFS.cpp include/serialized/serialized.cpp include/gpu/gpuBFS_kernels.cu include/gpu/gpuBFS.cu include/prefix_sum/prefixSum.cu main.cu
